# django-warmdb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  prompt.md  pyproject.toml  spec.md
src/warmdb/: __init__.py  apps.py  core.py  exceptions.py  naming.py  postgres.py  runner.py  schema.py  snapshot.py  state.py
src/warmdb/management/commands/: warmdb.py
tests/: test_integration_postgres.py  test_integration_snapshot.py  test_operation_lock.py  test_refresh.py  test_runner_commanderror.py  test_schema_hash.py  test_snapshot_naming.py  test_snapshot_state.py  test_state_allocation.py
tests/example_project/: manage.py
tests/example_project/example_app/: apps.py  models.py  tests.py
tests/example_project/example_app/migrations/: 0001_initial.py
tests/example_project/example_project/: settings.py  urls.py  wsgi.py
