[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-warmdb"
version = "0.2.0"
description = "Pre-warmed Postgres DB pool for Django tests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "django-warmdb contributors"}]
keywords = ["django", "postgres", "testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "Django>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24.0.0",
  "pre-commit>=3.0.0",
  "psycopg[binary]>=3.1",
  # Constrain Django in dev/test envs so integration tests can run against
  # older Postgres versions commonly found in local setups.
  "Django>=3.2,<5.2",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: opt-in integration tests requiring a real Postgres instance",
]
